// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ObojoboDraft.Sections.Assessment adapter constructor floors decimal attempt integers 1`] = `
Object {
  "attempts": 6,
  "review": "never",
  "rubric": AssessmentRubric {
    "mods": Array [],
    "originalRubric": Object {},
    "rubric": Object {
      "failedResult": 0,
      "passedResult": "$attempt_score",
      "passingAttemptScore": 0,
      "unableToPassResult": null,
    },
    "type": "attempt",
  },
  "scoreActions": ScoreActions {
    "actions": Array [],
    "originalActions": null,
  },
}
`;

exports[`ObojoboDraft.Sections.Assessment adapter constructs with N attempts 1`] = `
Object {
  "attempts": 6,
  "review": "never",
  "rubric": AssessmentRubric {
    "mods": Array [],
    "originalRubric": Object {},
    "rubric": Object {
      "failedResult": 0,
      "passedResult": "$attempt_score",
      "passingAttemptScore": 0,
      "unableToPassResult": null,
    },
    "type": "attempt",
  },
  "scoreActions": ScoreActions {
    "actions": Array [],
    "originalActions": null,
  },
}
`;

exports[`ObojoboDraft.Sections.Assessment adapter constructs with default values 1`] = `
Object {
  "attempts": Infinity,
  "review": "never",
  "rubric": AssessmentRubric {
    "mods": Array [],
    "originalRubric": Object {},
    "rubric": Object {
      "failedResult": 0,
      "passedResult": "$attempt_score",
      "passingAttemptScore": 0,
      "unableToPassResult": null,
    },
    "type": "attempt",
  },
  "scoreActions": ScoreActions {
    "actions": Array [],
    "originalActions": undefined,
  },
}
`;

exports[`ObojoboDraft.Sections.Assessment adapter constructs with unlimited attempts 1`] = `
Object {
  "attempts": Infinity,
  "review": "never",
  "rubric": AssessmentRubric {
    "mods": Array [],
    "originalRubric": Object {},
    "rubric": Object {
      "failedResult": 0,
      "passedResult": "$attempt_score",
      "passingAttemptScore": 0,
      "unableToPassResult": null,
    },
    "type": "attempt",
  },
  "scoreActions": ScoreActions {
    "actions": Array [],
    "originalActions": null,
  },
}
`;
